--- a/README
+++ b/README
@@ -3,7 +3,7 @@ A simple interactive Go interpreter built on exp/eval with some readline refinem
 Note
 ====
 
-you'll need go-readline bindings from https://bitbucket.org/binet/go-readline
+you'll need go-readline bindings from https://github.com/sbinet/go-readline
 
 Example
 =======
